# VoxDesk

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  run_tests.py  setup.py
config/: default.yaml
config/personalities/: voxly.yaml
docs/: architecture.md  dependency_matrix.md  local_smoke_checklist.md  progress.md  security_privacy_policy.md  smoke_test.md
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js  audio-capture.js  audio-processor.js  chat.js  dev-hud.js  full-voice-mode.js  screen-preview.js  settings.js  websocket.js
src/: __init__.py  audio_protocol.py  audio_utils.py  capture.py  config.py  hotkey.py  image_artifact.py  image_metadata.py  isolation.py  llm_client.py  main.py  metrics.py  model_state.py  protocols.py  registry.py  stt.py  translator.py  tray.py  tts.py  vram_manager.py  websocket_manager.py
src/llm/: __init__.py  history.py  local_server_provider.py  provider.py  sidecar.py  types.py
src/routes/: chat.py  history.py  settings.py  voice_v2.py
tests/: __init__.py  conftest.py  test_audio.py  test_audio_protocol.py  test_audit_regression.py  test_config.py  test_handler_budget.py  test_image_artifact.py  test_image_metadata.py  test_llm_client.py  test_metrics.py  test_model_state.py  test_phase4_integration.py  test_protocols.py  test_quality_parity.py  test_registry.py  test_regression.py  test_routes.py  test_sprint52_fixes.py  test_sprint5_prompts.py  test_sprint6_context.py  test_sprint7_voice_ux.py  test_sprint81_integrity.py  test_sprint8_local_server.py  test_startup.py  test_subsystems.py  test_voice_v2.py  test_vram_manager.py
