[project]
name = "voxdesk"
version = "0.7.2"
description = "VoxDesk — Local-only AI desktop assistant with screen analysis and voice chat"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "llama-cpp-python",
    "dxcam>=0.3.0",
    "faster-whisper>=1.1.0",
    "kokoro>=0.9.0",
    "soundfile>=0.13.0",
    "sounddevice>=0.5.0",
    "Pillow>=11.0.0",
    "pyyaml>=6.0",
    "keyboard>=0.13.5",
    "pystray>=0.19.0",
    "numpy>=2.0,<3",
    "websockets>=14.0",
    "av>=14.0",
    # Local sidecar HTTP client (localhost-only, Sprint 8)
    "httpx>=0.27.0",
    # Translator (MarianMT TR→EN)
    "transformers>=4.40.0",
    "sentencepiece>=0.2.0",
    "sacremoses>=2.1.0",
]

[project.scripts]
voxdesk = "src.main:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-benchmark>=4.0",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.3.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Pure logic, no I/O, no hardware",
    "integration: Requires mocked services or real config",
    "regression: Guards against known fixed bugs",
    "benchmark: Performance baseline measurements",
    "gpu: Requires CUDA GPU — opt-in",
    "model_required: Requires GGUF model files — opt-in",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/main.py"]

[tool.coverage.report]
fail_under = 55
show_missing = true
